# kaguya

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  RECORD.md
CMake/: FindOptiX.cmake  bin2c_wrapper.cmake
include/ext/: clipp.h
include/ext/glm/: ext.hpp
include/ext/glm/detail/: _swizzle.hpp  _vectorize.hpp  func_common.hpp  func_common.inl  func_integer.inl  func_matrix.hpp  func_matrix.inl  setup.hpp  type_half.inl  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.inl  type_mat3x3.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x3.inl  type_mat4x4.inl  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  type_vec4.hpp  type_vec4_simd.inl
include/ext/glm/gtc/: functions.inl  noise.inl  quaternion.inl  random.inl
include/ext/glm/gtx/: compatibility.hpp  euler_angles.hpp  euler_angles.inl  io.inl  matrix_decompose.hpp  rotate_normalized_axis.hpp  scalar_multiplication.hpp  spline.inl  transform.inl  transform2.hpp
include/ext/glm/simd/: platform.h
include/glm/: CMakeLists.txt  fwd.hpp
include/glm/detail/: func_common_simd.inl  func_exponential.inl  func_geometric.hpp  func_geometric.inl  func_geometric_simd.inl  func_matrix_simd.inl  type_gentype.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.inl  type_mat3x4.hpp  type_mat4x2.inl  type_mat4x4.hpp  type_vec1.hpp  type_vec1.inl  type_vec3.inl  type_vec4.inl
include/glm/gtc/: color_space.inl  epsilon.inl  matrix_access.inl  matrix_inverse.inl  matrix_transform.inl  packing.inl  quaternion.hpp  round.inl  ulp.inl
include/glm/gtx/: closest_point.hpp  color_space_YCoCg.hpp  component_wise.inl  dual_quaternion.hpp  dual_quaternion.inl  handed_coordinate_space.hpp  intersect.inl  io.hpp  matrix_decompose.inl  matrix_interpolation.inl  mixed_product.hpp  quaternion.hpp  rotate_vector.inl  string_cast.inl  vector_angle.inl
include/glm/simd/: common.h  matrix.h  platform.h
include/kaguya/: Common.h  Config.h  common.h
include/kaguya/core/: Core.h  Interaction.h  Transform.h  core.h
include/kaguya/core/bsdf/: BSDF.h  BXDF.h  BXDFFresnelMicrofacetReflection.h  BXDFFresnelSpecular.h  BXDFGlossyDiffuseReflection.h  BXDFLambertianReflection.h  BXDFMicrofacet.h  BXDFMicrofacetReflection.h  BXDFMicrofacetTransmission.h  BXDFOrenNayar.h  BXDFSpecular.h  BXDFSpecularReflection.h  BXDFSpecularTransmission.h  FourierBSDF.h  Fresnel.h  FresnelConductor.h  FresnelDefault.h  FresnelDielectric.h
include/kaguya/core/bssdf/: BSSRDF.h
include/kaguya/core/bssrdf/: BSSRDF.h  SeparableBSSRDF.h  SeparableBSSRDFAdapter.h  TabulatedBSSRDF.h
include/kaguya/core/light/: AreaLight.h  DiffuseAreaLight.h  DirectLight.h  DirectionLight.h  EnvironmentLight.h  InfiniteLight.h  Light.h  PointLight.h  SpotLight.h  SunLight.h
include/kaguya/core/medium/: GridDensityMedium.h  IsotropicMedium.h  Medium.h  MediumBound.h  MediumBoundary.h  MediumInterface.h
include/kaguya/core/phase/: HenyeyGreensteinFunction.h  PhaseFunction.h
include/kaguya/core/spectrum/: Spectrum.hpp
include/kaguya/gpu/: cuda_utils.h  optix_utils.h  utils.h
include/kaguya/material/: CoatingMaterial.h  ConstantTexture.h  Dielectric.h  DiffuseLight.h  Emitter.h  Lambertian.h  Material.h  Metal.h  Mirror.h  OrenNayar.h  PatinaMaterial.h  PlasticMaterial.h  SubsurfaceMaterial.h  Texture.h  Volume.h
include/kaguya/material/texture/: ChessboardTexture.h  ConstantTexture.h  ImageTexture.h  SphericalMapping2D.h  Texture.h  TextureMapping2D.h  UVMapping2D.h
include/kaguya/math/: Distribution.h  FuzzyReflectPdf.h  HemiCosinePdf.h  HemiCosineSampler.h  HemiReflectPdf.h  HemiReflectSampler.h  HemiUniformPdf.h  HemiUniformSampler.h  LightHitPdf.h  Math.h  Math.hpp  ObjectHitPdf.h  PreciseReflectPdf.h  RefractPdf.h  RefractSampler.h  Sampler.hpp  ScatterPdf.h  ScatterSampler.h  SurfaceHitPdf.h
include/kaguya/parallel/: AtomicFloat.h  Barrier.h  RenderPool.h  RenderTask.h
include/kaguya/sampler/: DefaultSampler.h  HaltonSampler.h  IndependentSampler.h  RNG.h  Sampler.h  SamplerFactory.hpp  SimpleHaltonSampler.h
include/kaguya/scene/: Aggregation.h  Box.h  Camera.h  Cube.h  Geometry.h  Hittable.h  Intersectable.h  ObjectSampler.h  OptiXScene.h  Scene.h  SceneData.h  Shape.h  ShapeSampler.h  SimpleScene.h  TriangleMesh.h
include/kaguya/scene/accumulation/: AABB.h  BVH.h
include/kaguya/scene/aggregation/: Box.h  TriangleMesh.h
include/kaguya/scene/importer/: OptiXSceneImporter.h  SceneImporter.h  SimpleSceneImporter.h
include/kaguya/scene/meta/: Box.h  Cube.h  (+8 more)
include/kaguya/tracer/: BDPathTracer.h  BidirectionalPathTracer.h  Camera.h  FilmPlane.h  PathRecorder.h  PathTracer.h  PathTracer2.h  Ray.h  Tracer.h  TracerFactory.h  WhittedTracer.h
include/kaguya/utils/: FileReader.h  IOReader.h  ImageIO.h  ImageReader.h  MemoryArena.h  ObjLoader.h  ScopeSwapper.hpp  TaggedPointer.h  VisibilityTester.h  VisibilityTester.hpp  type_utils.h
src/: main.cpp
src/kaguya/: Config.cpp
src/kaguya/core/: Interaction.cpp  Transform.cpp
src/kaguya/material/: CoatingMaterial.cpp  ConstantTexture.cpp  Dielectric.cpp  Emitter.cpp  Lambertian.cpp  Material.cpp  Metal.cpp  Mirror.cpp  OrenNayar.cpp  PatinaMaterial.cpp  PlasticMaterial.cpp  SubsurfaceMaterial.cpp
src/kaguya/math/: Distribution.cpp  HemiCosinePdf.cpp  HemiCosineSampler.cpp  HemiReflectPdf.h.cpp  HemiUniformPdf.cpp  HemiUniformSampler.cpp  LightHitPdf.cpp  Math.cpp  ObjectHitPdf.cpp  RefractPdf.cpp  RefractSampler.cpp
src/kaguya/parallel/: Barrier.cpp  RenderPool.cpp  RenderTask.cpp
src/kaguya/sampler/: DefaultSampler.cpp  HaltonSampler.cpp  IndependentSampler.cpp  RNG.cpp  Sampler.cpp  SimpleHaltonSampler.cpp
src/kaguya/scene/: Aggregation.cpp  Camera.cpp  Cube.cpp  Geometry.cpp  OptiXScene.cpp  Scene.cpp  Shape.cpp  ShapeSampler.cpp  SimpleScene.cpp  TriangleMesh.cpp
src/kaguya/tracer/: Camera.cpp  FilmPlane.cpp  PathRecorder.cpp  PathTracer.cpp  Ray.cpp  Tracer.cpp  TracerFactory.cpp
src/kaguya/utils/: FileReader.cpp  IOReader.cpp  ImageIO.cpp  ImageReader.cpp  MemoryArena.cpp  ObjLoader.cpp  VisibilityTester.cpp
src/pugixml/: pugixml.cpp
(+81 files in other folders)
